--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "a basic app to deploy",
+  "description": "a backend app to deploy",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
-    "node", "backend", "javascript","express"
+    "node",
+    "backend",
+    "javascript",
+    "express"
   ],
   "author": "Sayed Riyaz ul Hasan",
   "license": "ISC",
@@ -15,5 +19,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
