--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon  -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "node",
@@ -15,12 +15,13 @@
   ],
   "author": "Sayed Riyaz ul Hasan",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0"
-  },
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "mongoose": "^8.18.1"
   }
 }
